--- a/app/server/src/index.html
+++ b/app/server/src/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="bundle.js"></script>
+        <script src="public/bundle.js"></script>
     </head>
     <body>
         <canvas id="main-canvas" width="800" height="600" style="border: 1px solid black">
