--- a/app/server/src/index.html
+++ b/app/server/src/index.html
@@ -15,7 +15,10 @@
         }
     </style>
     <body>
-        <div></div>
+        <div>
+            <button id="create-lobby-btn">Create Lobby</button>
+            <div id="id-display"></div>
+        </div>
 
         <canvas id="main-canvas" width="800" height="600" style="border: 1px solid black">
 
